--- a/css/index.css
+++ b/css/index.css
@@ -261,8 +261,8 @@ header {
 			"icon"
 			"heading"
 			"description";
-        column-gap: 0;
-        text-align: center;
+		column-gap: 0;
+		text-align: center;
 	}
 	.service-item h4 {
 		font-size: 1.3rem;
@@ -272,11 +272,11 @@ header {
 	}
 	.service-item i {
 		font-size: 2.5rem;
-        margin-bottom: 1.5rem;
+		margin-bottom: 1.5rem;
 	}
-    .service-item i:hover {
-        transform: scale(1.15);
-    }
+	.service-item i:hover {
+		transform: scale(1.15);
+	}
 }
 @media screen and (max-width: 576px) {
 	/* header */
@@ -302,5 +302,18 @@ header {
 	.divider,
 	.hero-message {
 		display: none;
+	}
+	/* services */
+	.service-item {
+		padding: 2rem;
+	}
+	.service-item h3 {
+		font-size: 1.5rem;
+	}
+	.service-item h6 {
+		font-size: 1rem;
+	}
+	.service-item p {
+		font-size: 0.85rem;
 	}
 }
