--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,9 @@ body {
 	font-family: "Poppins", sans-serif;
 	overflow-x: hidden;
 }
+section {
+	padding: 4rem 0;
+}
 .section-heading {
 	text-align: center;
 	margin-bottom: 3rem;
@@ -30,6 +33,7 @@ body {
 	font-size: 2.5rem;
 	font-weight: 600;
 	margin: 0.5rem 0;
+	text-transform: capitalize;
 }
 
 /* header */
@@ -114,9 +118,6 @@ header {
 }
 
 /* Services */
-.services {
-	padding: 4rem 0;
-}
 .service-item {
 	box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
 	border-radius: 0.625rem;
