--- a/css/index.css
+++ b/css/index.css
@@ -159,7 +159,6 @@ header {
 	background-position: center;
 	background-size: cover;
 	padding: 5rem;
-	/* height: 30vh; */
 	text-align: center;
 	align-items: center;
 }
@@ -233,6 +232,75 @@ header {
 	color: var(--secondary-color) !important;
 }
 
+/* learning plan form */
+.form-section {
+	padding: 0;
+}
+.learning-plan-form {
+	background: url("../assets/images/plan-bg.png") no-repeat;
+	background-position: center;
+	background-size: cover;
+	padding: 0 6rem;
+	display: grid;
+	grid-template-areas: "image form";
+	gap: 15%;
+}
+.lplan-img {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	grid-area: image;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.lplan-img img {
+	width: 100%;
+	height: 92%;
+}
+.plan {
+	padding: 4.5rem 6rem 0 0;
+	grid-area: form;
+}
+.plan h3,
+.plan-form label {
+	color: var(--bg-color);
+}
+.plan-form {
+	margin-top: 4rem;
+}
+.plan-form input,
+.plan-form select {
+	background-color: gray;
+	color: var(--bg-color);
+	outline: none;
+	border: none;
+}
+.plan-form input:focus,
+.plan-form select:focus {
+	border: none;
+	outline: 2px solid tomato;
+}
+.submit-btn-container {
+	text-align: center;
+	margin: 0;
+}
+.btn-submit {
+	border: none;
+	border-radius: 0.625rem;
+	font-size: 1rem;
+	padding: 0.9rem 2rem;
+	color: var(--bg-color);
+	background-color: var(--primary-color);
+	font-weight: 600;
+	transition: all 0.3s ease;
+}
+.btn-submit:hover {
+	opacity: 0.9;
+	padding-left: 2.2rem;
+	padding-right: 2.2rem;
+}
+
 /* ------- Responsiveness ------- */
 /* Media Queries */
 @media screen and (max-width: 1270px) {
@@ -272,6 +340,35 @@ header {
 	.banner .buttons a {
 		font-size: 1.1rem;
 		padding: 0.85rem 1.9rem;
+	}
+	/* learning plan form */
+	.learning-plan-form {
+		padding: 0 4rem;
+		gap: 5%;
+	}
+	.lplan-img img {
+		width: 75%;
+	}
+	.plan {
+		padding-bottom: 3rem;
+	}
+	.plan-form label {
+		font-size: 1.1rem !important;
+	}
+	.plan-form input,
+	.plan-form select {
+		font-size: 1rem !important;
+	}
+	.submit-btn-container {
+		font-size: 1.1rem !important;
+	}
+	.btn-submit {
+		font-size: 0.95rem;
+		padding: 0.85rem 1.8rem;
+	}
+	.btn-submit:hover {
+		padding-left: 2rem;
+		padding-right: 2rem;
 	}
 }
 @media screen and (max-width: 992px) {
@@ -332,6 +429,17 @@ header {
 	.course-list {
 		text-align: center;
 	}
+	/* learning plan form */
+	.learning-plan-form {
+		grid-template-areas: "form";
+		padding: 0 3rem;
+	}
+	.lplan-img {
+		display: none;
+	}
+	.plan {
+		padding: 3rem 7rem 4rem;
+	}
 }
 @media screen and (max-width: 768px) {
 	/* GENERAL CSS */
@@ -386,6 +494,35 @@ header {
 	/* banner */
 	.banner .buttons a {
 		text-wrap: nowrap;
+	}
+	/* learning plan form */
+	.learning-plan-form {
+		padding: 0 1.5rem;
+	}
+	.plan {
+		padding-left: 0;
+		padding-right: 0;
+		margin: 0 auto;
+	}
+	.plan-form {
+		text-align: center;
+	}
+	.plan-form label {
+		font-size: 1rem !important;
+	}
+	.plan-form input,
+	.plan-form select {
+		text-align: center;
+	}
+	.submit-btn-container {
+		font-size: 1rem !important;
+	}
+	.btn-submit {
+		padding: 0.75rem 0.8rem;
+	}
+	.btn-submit:hover {
+		padding-left: 1rem;
+		padding-right: 1rem;
 	}
 }
 @media screen and (max-width: 576px) {
